[gd_scene load_steps=12 format=2]

[ext_resource path="res://EnemeyContainer/Basic_enemies/small_knight.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/PngsFiles/small guy.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy/PngsFiles/small guy sword attack.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 37.5, 45.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 41 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.5, 40.5 )

[sub_resource type="CircleShape2D" id=8]
radius = 103.947

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotation/Position2D/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotation/Position2D/Sprite/Sword_area/Sword_hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Rotation:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "moving"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "pop_up_mation"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.784314, 0.709804, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "sword_swipe"
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation/Position2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotation/Position2D/Sprite/Sword_area/Sword_hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=["small_group"]]
modulate = Color( 1, 1, 1, 0 )
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
vframes = 3

[node name="hit_box" type="Area2D" parent="." groups=["small_group"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box" groups=["small_group"]]
position = Vector2( -2.5, 7.5 )
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["small_group"]]
position = Vector2( -3.5, 8 )
shape = SubResource( 1 )

[node name="Rotation" type="Position2D" parent="."]
position = Vector2( 1, -2 )
rotation = 3.14159

[node name="Position2D" type="Position2D" parent="Rotation"]
position = Vector2( -55, 24 )

[node name="Sprite" type="Sprite" parent="Rotation/Position2D"]
position = Vector2( -4, 3 )
texture = ExtResource( 3 )
hframes = 3
vframes = 3
frame = 1

[node name="Sword_area" type="Area2D" parent="Rotation/Position2D/Sprite"]

[node name="Sword_hitbox" type="CollisionShape2D" parent="Rotation/Position2D/Sprite/Sword_area"]
position = Vector2( -6.5, 1.5 )
shape = SubResource( 2 )
disabled = true

[node name="area_search" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_search"]
position = Vector2( -3, 0 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/moving = SubResource( 4 )
anims/pop_up_mation = SubResource( 5 )
anims/sword_swipe = SubResource( 6 )

[connection signal="area_entered" from="Rotation/Position2D/Sprite/Sword_area" to="." method="_on_Sword_area_area_entered"]
[connection signal="area_entered" from="area_search" to="." method="_on_area_search_area_entered"]
[connection signal="area_exited" from="area_search" to="." method="_on_area_search_area_exited"]
